Fixed scrolling issue on mobile

--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ a {
     right: 0;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: calc(100% - 17px);
     background-color: gray;
     z-index: 100;
 }
@@ -177,6 +177,10 @@ a {
 @media (max-width: 979px) {
     .x-navbar-fixed-top {
         position: relative;
+    }
+
+    .navBar {
+        width: 100%;
     }
 
     .content {
